Two column masonry, finish three/four tomorrow

--- a/index.html
+++ b/index.html
@@ -79,14 +79,61 @@
 		</nav>
 	</header>
 	<section class='content'>
-		<header class='content__header'>
+<!-- 		<header class='content__header'>
 			<h1> Category: All</h1>
-		</header>
+		</header> -->
 		<div class='content__masonWrap'>
+
 			<div class='mason'>
 				<div class='mason__sizer'></div>
+				<article class='mason__brick'>
+					<div class='mason__brick__thumb'>
+						<a><img src="/assets/carsm.jpg" srcset='/assets/carsm.jpg 1x, /assets/carlrg.jpg 2x'/></a>
+					</div>
+					<div class="mason__brick__blurb">
+						<h2> Lorem ipsum dolor sit, amet consectetur adipisicing, elit.</h2>
+						<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquam, totam. Eos, optio numquam qui nam excepturi accusantium amet exercitationem similique aliquam neque ipsa culpa non.</p>
+					</div>
+				</article>
+				<article class='mason__brick'>
+					<div class='mason__brick__thumb'>
+						<a><img src="/assets/carsm.jpg" srcset='/assets/carsm.jpg 1x, /assets/carlrg.jpg 2x'/></a>
+					</div>
+					<div class="mason__brick__blurb">
+						<h2> Lorem ipsum dolor sit, amet consectetur adipisicing, elit.</h2>
+						<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquam, totam. Eos, optio numquam qui nam excepturi accusantium amet exercitationem similique aliquam neque ipsa culpa non.</p>
+					</div>
+				</article>
+				<article class='mason__brick'>
+					<div class='mason__brick__thumb'>
+						<a><img src="/assets/modern1sm.jpg" srcset='/assets/modern1sm.jpg 1x, /assets/modern1lrg.jpg 2x'/></a>
+					</div>
+					<div class="mason__brick__blurb">
+						<h2> Lorem ipsum dolor sit, amet consectetur adipisicing, elit.</h2>
+						<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquam, totam. Eos, optio numquam qui nam excepturi accusantium amet exercitationem similique aliquam neque ipsa culpa non.</p>
+					</div>
+				</article>
+				<article class='mason__brick'>
+					<div class='mason__brick__thumb'>
+						<a><img src="/assets/carsm.jpg" srcset='/assets/carsm.jpg 1x, /assets/carlrg.jpg 2x'/></a>
+					</div>
+					<div class="mason__brick__blurb">
+						<h2> Lorem ipsum dolor sit, amet consectetur adipisicing, elit.</h2>
+						<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquam, totam. Eos, optio numquam qui nam excepturi accusantium amet exercitationem similique aliquam neque ipsa culpa non.</p>
+					</div>
+				</article>
+				<article class='mason__brick'>
+					<div class='mason__brick__thumb'>
+						<a><img src="/assets/modern1sm.jpg" srcset='/assets/modern1sm.jpg 1x, /assets/modern1lrg.jpg 2x'/></a>
+					</div>
+					<div class="mason__brick__blurb">
+						<h2> Lorem ipsum dolor sit, amet consectetur adipisicing, elit.</h2>
+						<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquam, totam. Eos, optio numquam qui nam excepturi accusantium amet exercitationem similique aliquam neque ipsa culpa non.</p>
+					</div>
+				</article>
 			</div>
 		</div>
+		<a class='search' href="">Search</a>
 	</section>
 </body>
 </html>
