--- a/index.html
+++ b/index.html
@@ -86,48 +86,102 @@
 
 			<div class='mason'>
 				<div class='mason__sizer'></div>
-				<article class='mason__brick'>
-					<div class='mason__brick__thumb'>
-						<a><img src="/assets/carsm.jpg" srcset='/assets/carsm.jpg 1x, /assets/carlrg.jpg 2x'/></a>
+				<article class='mason__brick entry'>
+					<div class=' entry__thumb'>
+						<a><img src="/assets/carsm.jpg"/></a>
 					</div>
-					<div class="mason__brick__blurb">
+					<div class="entry__blurb">
 						<h2> Lorem ipsum dolor sit, amet consectetur adipisicing, elit.</h2>
+						<div class='entry__meta'>
+							<a class='entry__category'>
+								Technology
+							</a>,
+							<a class='entry__category'>
+								Lifestyle
+							</a>
+							<a class='entry__date'>
+								Mar 16, 2021
+							</a>
+						</div>
 						<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquam, totam. Eos, optio numquam qui nam excepturi accusantium amet exercitationem similique aliquam neque ipsa culpa non.</p>
 					</div>
 				</article>
-				<article class='mason__brick'>
-					<div class='mason__brick__thumb'>
-						<a><img src="/assets/carsm.jpg" srcset='/assets/carsm.jpg 1x, /assets/carlrg.jpg 2x'/></a>
+				<article class='mason__brick entry'>
+					<div class='entry__thumb'>
+						<a><img src="/assets/modern2sm.jpg"/></a>
 					</div>
-					<div class="mason__brick__blurb">
+					<div class="entry__blurb">
 						<h2> Lorem ipsum dolor sit, amet consectetur adipisicing, elit.</h2>
+						<div class='entry__meta'>
+							<a class='entry__category'>
+								Food
+							</a>,
+							<a class='entry__category'>
+								Design
+							</a>
+							<a class='entry__date'>
+								Mar 15, 2021
+							</a>
+						</div>
 						<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquam, totam. Eos, optio numquam qui nam excepturi accusantium amet exercitationem similique aliquam neque ipsa culpa non.</p>
 					</div>
 				</article>
-				<article class='mason__brick'>
-					<div class='mason__brick__thumb'>
-						<a><img src="/assets/modern1sm.jpg" srcset='/assets/modern1sm.jpg 1x, /assets/modern1lrg.jpg 2x'/></a>
+				<article class='mason__brick entry'>
+					<div class=' entry__thumb'>
+						<a><img src="/assets/modern1sm.jpg"/></a>
 					</div>
-					<div class="mason__brick__blurb">
+					<div class="entry__blurb">
 						<h2> Lorem ipsum dolor sit, amet consectetur adipisicing, elit.</h2>
+						<div class='entry__meta'>
+							<a class='entry__category'>
+								Food
+							</a>,
+							<a class='entry__category'>
+								Design
+							</a>
+							<a class='entry__date'>
+								Mar 10, 2021
+							</a>
+						</div>
 						<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquam, totam. Eos, optio numquam qui nam excepturi accusantium amet exercitationem similique aliquam neque ipsa culpa non.</p>
 					</div>
 				</article>
-				<article class='mason__brick'>
-					<div class='mason__brick__thumb'>
-						<a><img src="/assets/carsm.jpg" srcset='/assets/carsm.jpg 1x, /assets/carlrg.jpg 2x'/></a>
+				<article class='mason__brick entry'>
+					<div class='entry__thumb'>
+						<a><img src="/assets/modern3sm.jpg"/></a>
 					</div>
-					<div class="mason__brick__blurb">
+					<div class="entry__blurb">
 						<h2> Lorem ipsum dolor sit, amet consectetur adipisicing, elit.</h2>
+						<div class='entry__meta'>
+							<a class='entry__category'>
+								Design
+							</a>,
+							<a class='entry__category'>
+							</a>
+							<a class='entry__date'>
+								Mar 9, 2021
+							</a>
+						</div>
 						<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquam, totam. Eos, optio numquam qui nam excepturi accusantium amet exercitationem similique aliquam neque ipsa culpa non.</p>
 					</div>
 				</article>
-				<article class='mason__brick'>
-					<div class='mason__brick__thumb'>
-						<a><img src="/assets/modern1sm.jpg" srcset='/assets/modern1sm.jpg 1x, /assets/modern1lrg.jpg 2x'/></a>
+				<article class='mason__brick entry'>
+					<div class='entry__thumb'>
+						<a><img src="/assets/modern4sm.jpg"/></a>
 					</div>
-					<div class="mason__brick__blurb">
+					<div class="entry__blurb">
 						<h2> Lorem ipsum dolor sit, amet consectetur adipisicing, elit.</h2>
+						<div class='entry__meta'>
+							<a class='entry__category'>
+								Social
+							</a>,
+							<a class='entry__category'>
+								Technology
+							</a>
+							<a class='entry__date'>
+								Mar 5, 2021
+							</a>
+						</div>
 						<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquam, totam. Eos, optio numquam qui nam excepturi accusantium amet exercitationem similique aliquam neque ipsa culpa non.</p>
 					</div>
 				</article>
