--- a/index.html
+++ b/index.html
@@ -185,6 +185,26 @@
 						<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquam, totam. Eos, optio numquam qui nam excepturi accusantium amet exercitationem similique aliquam neque ipsa culpa non.</p>
 					</div>
 				</article>
+				<article class='mason__brick entry'>
+					<div class='entry__thumb'>
+						<a><img src="http://source.unsplash.com/random"/></a>
+					</div>
+					<div class="entry__blurb">
+						<h2> Lorem ipsum dolor sit, amet consectetur adipisicing, elit.</h2>
+						<div class='entry__meta'>
+							<a class='entry__category'>
+								Food
+							</a>,
+							<a class='entry__category'>
+								Design
+							</a>
+							<a class='entry__date'>
+								Mar 15, 2021
+							</a>
+						</div>
+						<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquam, totam. Eos, optio numquam qui nam excepturi accusantium amet exercitationem similique aliquam neque ipsa culpa non.</p>
+					</div>
+				</article>
 			</div>
 		</div>
 		<a class='search' href="">Search</a>
