Search btn/window

--- a/index.html
+++ b/index.html
@@ -20,86 +20,84 @@
 		<nav class='header__navWrap'>
 			<ul class='header__nav'>
 				<li class='header__nav__item header__nav__item--active' >
-					<a>Home</a>
+					<a href='javascript:void(0)'>Home</a>
 				</li>
 				<li id='categorySubMenu' class='header__nav__item' >
-					<a>Categories<i class="fas fa-chevron-down"></i></a>
+					<a href='javascript:void(0)'>Categories<i class="fas fa-chevron-down"></i></a>
 					<ul class='subMenu subMenu--closed'>
 						<li>
-							<a>Technology</a>
+							<a href='javascript:void(0)'>Technology</a>
 						</li>
 						<li>
-							<a>Lifestyle</a>
+							<a href='javascript:void(0)'>Lifestyle</a>
 						</li>
 						<li>
-							<a>Food</a>
+							<a href='javascript:void(0)'>Food</a>
 						</li>
 						<li>
-							<a>Design</a>
+							<a href='javascript:void(0)'>Design</a>
 						</li>
 						<li>
-							<a>Social</a>
+							<a href='javascript:void(0)'>Social</a>
 						</li>
 					</ul>
 				</li>
 				<li id='postsSubMenu' class='header__nav__item' >
-					<a>Posts<i class="fas fa-chevron-down"></i></a>
+					<a href='javascript:void(0)'>Posts<i class="fas fa-chevron-down"></i></a>
 					<ul class='subMenu subMenu--closed'>
 						<li>
-							<a>Technology</a>
+							<a href='javascript:void(0)'>Technology</a>
 						</li>
 						<li>
-							<a>Lifestyle</a>
+							<a href='javascript:void(0)'>Lifestyle</a>
 						</li>
 						<li>
-							<a>Food</a>
+							<a href='javascript:void(0)'>Food</a>
 						</li>
 						<li>
-							<a>Design</a>
+							<a href='javascript:void(0)'>Design</a>
 						</li>
 						<li>
-							<a>Social</a>
+							<a href='javascript:void(0)'>Social</a>
 						</li>
 					</ul>
 				</li>
 				<li class='header__nav__item' >
-					<a> About</a>
+					<a href='javascript:void(0)'> About</a>
 				</li>
 				<li class='header__nav__item' >
-					<a> Developer </a>
+					<a href='javascript:void(0)'> Developer </a>
 				</li>
 			</ul>
 		<!-- END OF NAV LIST -->
 			<ul class='header__social'>
-				<li class='header__nav__item header__nav__item--icon' href="" alt='Linked In'><i class="fab fa-linkedin-in"></i></li>
-				<li class='header__nav__item header__nav__item--icon' href="" alt='Twitter'><i class="fab fa-twitter"></i></li>
-				<li class='header__nav__item header__nav__item--icon' href="" alt='Instgram'><i class="fab fa-instagram"></i></li>
-				<li class='header__nav__item header__nav__item--icon' href="" alt='Facebook'><i class="fab fa-facebook-f"></i></li>
+				<li class='header__nav__item header__nav__item--icon' href="" alt='Linked In'><a href='javascript:void(0)'><i class="fab fa-linkedin-in"></i> </a> </li>
+				<li class='header__nav__item header__nav__item--icon' href="" alt='Twitter'><a href='javascript:void(0)'><i class="fab fa-twitter"></i> </a></li>
+				<li class='header__nav__item header__nav__item--icon' href="" alt='Instgram'><a href='javascript:void(0)'><i class="fab fa-instagram"></i> </a></li>
+				<li class='header__nav__item header__nav__item--icon' href="" alt='Facebook'><a href='javascript:void(0)'><i class="fab fa-facebook-f"></i> </a></li>
 			</ul>	
 		</nav>
 	</header>
 	<section class='content'>
-<!-- 		<header class='content__header'>
-			<h1> Category: All</h1>
-		</header> -->
+
 		<div class='content__masonWrap'>
 
 			<div class='mason'>
 				<div class='mason__sizer'></div>
 				<article class='mason__brick entry'>
 					<div class=' entry__thumb'>
-						<a><img src="/assets/carsm.jpg"/></a>
+						<a href='javascript:void(0)'><img src="/assets/carsm.jpg"/></a>
 					</div>
 					<div class="entry__blurb">
 						<h2> Lorem ipsum dolor sit, amet consectetur adipisicing, elit.</h2>
 						<div class='entry__meta'>
-							<a class='entry__category'>
+							<a href='javascript:void(0)' class='entry__category'>
 								Technology
 							</a>,
-							<a class='entry__category'>
+							<a href='javascript:void(0)' class='entry__category'>
 								Lifestyle
 							</a>
-							<a class='entry__date'>
+							<a href='javascript:void(0)' class='entry__date'>
 								Mar 16, 2021
 							</a>
 						</div>
@@ -108,18 +106,18 @@
 				</article>
 				<article class='mason__brick entry'>
 					<div class='entry__thumb'>
-						<a><img src="/assets/modern2sm.jpg"/></a>
+						<a href='javascript:void(0)'><img src="/assets/modern2sm.jpg"/></a>
 					</div>
 					<div class="entry__blurb">
 						<h2> Lorem ipsum dolor sit, amet consectetur adipisicing, elit.</h2>
 						<div class='entry__meta'>
-							<a class='entry__category'>
+							<a  href='javascript:void(0)'class='entry__category'>
 								Food
 							</a>,
-							<a class='entry__category'>
+							<a href='javascript:void(0)' class='entry__category'>
 								Design
 							</a>
-							<a class='entry__date'>
+							<a href='javascript:void(0)' class='entry__date'>
 								Mar 15, 2021
 							</a>
 						</div>
@@ -128,18 +126,18 @@
 				</article>
 				<article class='mason__brick entry'>
 					<div class=' entry__thumb'>
-						<a><img src="/assets/modern1sm.jpg"/></a>
+						<a href='javascript:void(0)'><img src="/assets/modern1sm.jpg"/></a>
 					</div>
 					<div class="entry__blurb">
 						<h2> Lorem ipsum dolor sit, amet consectetur adipisicing, elit.</h2>
 						<div class='entry__meta'>
-							<a class='entry__category'>
+							<a href='javascript:void(0)' class='entry__category'>
 								Food
 							</a>,
-							<a class='entry__category'>
+							<a href='javascript:void(0)' class='entry__category'>
 								Design
 							</a>
-							<a class='entry__date'>
+							<a href='javascript:void(0)' href='javascript:void(0)'class='entry__date'>
 								Mar 10, 2021
 							</a>
 						</div>
@@ -148,17 +146,17 @@
 				</article>
 				<article class='mason__brick entry'>
 					<div class='entry__thumb'>
-						<a><img src="/assets/modern3sm.jpg"/></a>
+						<a href='javascript:void(0)' ><img src="/assets/modern3sm.jpg"/></a>
 					</div>
 					<div class="entry__blurb">
 						<h2> Lorem ipsum dolor sit, amet consectetur adipisicing, elit.</h2>
 						<div class='entry__meta'>
-							<a class='entry__category'>
+							<a href='javascript:void(0)' class='entry__category'>
 								Design
 							</a>,
-							<a class='entry__category'>
+							<a href='javascript:void(0)' class='entry__category'>
 							</a>
-							<a class='entry__date'>
+							<a href='javascript:void(0)' class='entry__date'>
 								Mar 9, 2021
 							</a>
 						</div>
@@ -167,18 +165,18 @@
 				</article>
 				<article class='mason__brick entry'>
 					<div class='entry__thumb'>
-						<a><img src="/assets/modern4sm.jpg"/></a>
+						<a href='javascript:void(0)'><img src="/assets/modern4sm.jpg"/></a>
 					</div>
 					<div class="entry__blurb">
 						<h2> Lorem ipsum dolor sit, amet consectetur adipisicing, elit.</h2>
 						<div class='entry__meta'>
-							<a class='entry__category'>
+							<a href='javascript:void(0)' class='entry__category'>
 								Social
 							</a>,
-							<a class='entry__category'>
+							<a href='javascript:void(0)'class='entry__category'>
 								Technology
 							</a>
-							<a class='entry__date'>
+							<a href='javascript:void(0)' class='entry__date'>
 								Mar 5, 2021
 							</a>
 						</div>
@@ -187,18 +185,137 @@
 				</article>
 				<article class='mason__brick entry'>
 					<div class='entry__thumb'>
-						<a><img src="http://source.unsplash.com/random"/></a>
+						<a href='javascript:void(0)'><img src="http://source.unsplash.com/random"/></a>
 					</div>
 					<div class="entry__blurb">
 						<h2> Lorem ipsum dolor sit, amet consectetur adipisicing, elit.</h2>
 						<div class='entry__meta'>
-							<a class='entry__category'>
+							<a href='javascript:void(0)' class='entry__category'>
 								Food
 							</a>,
-							<a class='entry__category'>
+							<a href='javascript:void(0)' class='entry__category'>
 								Design
 							</a>
-							<a class='entry__date'>
+							<a href='javascript:void(0)' class='entry__date'>
+								Mar 15, 2021
+							</a>
+						</div>
+						<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquam, totam. Eos, optio numquam qui nam excepturi accusantium amet exercitationem similique aliquam neque ipsa culpa non.</p>
+					</div>
+				</article>
+				<article class='mason__brick entry'>
+					<div class=' entry__thumb'>
+						<a href='javascript:void(0)'><img src="/assets/carsm.jpg"/></a>
+					</div>
+					<div class="entry__blurb">
+						<h2> Lorem ipsum dolor sit, amet consectetur adipisicing, elit.</h2>
+						<div class='entry__meta'>
+							<a href='javascript:void(0)' class='entry__category'>
+								Technology
+							</a>,
+							<a href='javascript:void(0)' class='entry__category'>
+								Lifestyle
+							</a>
+							<a href='javascript:void(0)' class='entry__date'>
+								Mar 16, 2021
+							</a>
+						</div>
+						<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquam, totam. Eos, optio numquam qui nam excepturi accusantium amet exercitationem similique aliquam neque ipsa culpa non.</p>
+					</div>
+				</article>
+				<article class='mason__brick entry'>
+					<div class='entry__thumb'>
+						<a href='javascript:void(0)'><img src="/assets/modern2sm.jpg"/></a>
+					</div>
+					<div class="entry__blurb">
+						<h2> Lorem ipsum dolor sit, amet consectetur adipisicing, elit.</h2>
+						<div class='entry__meta'>
+							<a  href='javascript:void(0)'class='entry__category'>
+								Food
+							</a>,
+							<a href='javascript:void(0)' class='entry__category'>
+								Design
+							</a>
+							<a href='javascript:void(0)' class='entry__date'>
+								Mar 15, 2021
+							</a>
+						</div>
+						<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquam, totam. Eos, optio numquam qui nam excepturi accusantium amet exercitationem similique aliquam neque ipsa culpa non.</p>
+					</div>
+				</article>
+				<article class='mason__brick entry'>
+					<div class=' entry__thumb'>
+						<a href='javascript:void(0)'><img src="/assets/modern1sm.jpg"/></a>
+					</div>
+					<div class="entry__blurb">
+						<h2> Lorem ipsum dolor sit, amet consectetur adipisicing, elit.</h2>
+						<div class='entry__meta'>
+							<a href='javascript:void(0)' class='entry__category'>
+								Food
+							</a>,
+							<a href='javascript:void(0)' class='entry__category'>
+								Design
+							</a>
+							<a href='javascript:void(0)' href='javascript:void(0)'class='entry__date'>
+								Mar 10, 2021
+							</a>
+						</div>
+						<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquam, totam. Eos, optio numquam qui nam excepturi accusantium amet exercitationem similique aliquam neque ipsa culpa non.</p>
+					</div>
+				</article>
+				<article class='mason__brick entry'>
+					<div class='entry__thumb'>
+						<a href='javascript:void(0)' ><img src="/assets/modern3sm.jpg"/></a>
+					</div>
+					<div class="entry__blurb">
+						<h2> Lorem ipsum dolor sit, amet consectetur adipisicing, elit.</h2>
+						<div class='entry__meta'>
+							<a href='javascript:void(0)' class='entry__category'>
+								Design
+							</a>,
+							<a href='javascript:void(0)' class='entry__category'>
+							</a>
+							<a href='javascript:void(0)' class='entry__date'>
+								Mar 9, 2021
+							</a>
+						</div>
+						<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquam, totam. Eos, optio numquam qui nam excepturi accusantium amet exercitationem similique aliquam neque ipsa culpa non.</p>
+					</div>
+				</article>
+				<article class='mason__brick entry'>
+					<div class='entry__thumb'>
+						<a href='javascript:void(0)'><img src="/assets/modern4sm.jpg"/></a>
+					</div>
+					<div class="entry__blurb">
+						<h2> Lorem ipsum dolor sit, amet consectetur adipisicing, elit.</h2>
+						<div class='entry__meta'>
+							<a href='javascript:void(0)' class='entry__category'>
+								Social
+							</a>,
+							<a href='javascript:void(0)'class='entry__category'>
+								Technology
+							</a>
+							<a href='javascript:void(0)' class='entry__date'>
+								Mar 5, 2021
+							</a>
+						</div>
+						<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquam, totam. Eos, optio numquam qui nam excepturi accusantium amet exercitationem similique aliquam neque ipsa culpa non.</p>
+					</div>
+				</article>
+				<article class='mason__brick entry'>
+					<div class='entry__thumb'>
+						<a href='javascript:void(0)'><img src="http://source.unsplash.com/random"/></a>
+					</div>
+					<div class="entry__blurb">
+						<h2> Lorem ipsum dolor sit, amet consectetur adipisicing, elit.</h2>
+						<div class='entry__meta'>
+							<a href='javascript:void(0)' class='entry__category'>
+								Food
+							</a>,
+							<a href='javascript:void(0)' class='entry__category'>
+								Design
+							</a>
+							<a href='javascript:void(0)' class='entry__date'>
 								Mar 15, 2021
 							</a>
 						</div>
@@ -207,7 +324,18 @@
 				</article>
 			</div>
 		</div>
-		<a class='search' href="">Search</a>
+		<a href='javascript:void(0)' class='bigSearchButton' >Search <i class="fas fa-search"></i></a>
+		<a href='javascript:void(0)' class='smoothScroll'><i class="fas fa-arrow-up"></i></a>
+	</section>
+	<section class='searchWindow'>
+		<a href='javascript:void(0)' class='searchWindow__closeBtn'><i class="fas fa-times"></i> </a>
+		<form class='searchWindow__form'>
+			<label for='search'>
+				<span class='searchWindow__label'>Search for:</span> </br>
+				<input class='searchWindow__input' type="text" placeholder='Type Keywords' name="search"/>
+			</label>
+		</form>
+		<span>Press enter to begin your search</span>
 	</section>
 </body>
 </html>
