--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
 				<div class='mason__sizer'></div>
 				<article class='mason__brick entry'>
 					<div class=' entry__thumb'>
-						<a href='javascript:void(0)'><img src="/assets/carsm.jpg"/></a>
+						<a href='javascript:void(0)'><img src="assets/carsm.jpg"/></a>
 					</div>
 					<div class="entry__blurb">
 						<h2> Lorem ipsum dolor sit, amet consectetur adipisicing, elit.</h2>
@@ -106,7 +106,7 @@
 				</article>
 				<article class='mason__brick entry'>
 					<div class='entry__thumb'>
-						<a href='javascript:void(0)'><img src="/assets/modern2sm.jpg"/></a>
+						<a href='javascript:void(0)'><img src="assets/modern2sm.jpg"/></a>
 					</div>
 					<div class="entry__blurb">
 						<h2> Lorem ipsum dolor sit, amet consectetur adipisicing, elit.</h2>
@@ -126,7 +126,7 @@
 				</article>
 				<article class='mason__brick entry'>
 					<div class=' entry__thumb'>
-						<a href='javascript:void(0)'><img src="/assets/modern1sm.jpg"/></a>
+						<a href='javascript:void(0)'><img src="assets/modern1sm.jpg"/></a>
 					</div>
 					<div class="entry__blurb">
 						<h2> Lorem ipsum dolor sit, amet consectetur adipisicing, elit.</h2>
@@ -146,7 +146,7 @@
 				</article>
 				<article class='mason__brick entry'>
 					<div class='entry__thumb'>
-						<a href='javascript:void(0)' ><img src="/assets/modern3sm.jpg"/></a>
+						<a href='javascript:void(0)' ><img src="assets/modern3sm.jpg"/></a>
 					</div>
 					<div class="entry__blurb">
 						<h2> Lorem ipsum dolor sit, amet consectetur adipisicing, elit.</h2>
@@ -165,7 +165,7 @@
 				</article>
 				<article class='mason__brick entry'>
 					<div class='entry__thumb'>
-						<a href='javascript:void(0)'><img src="/assets/modern4sm.jpg"/></a>
+						<a href='javascript:void(0)'><img src="assets/modern4sm.jpg"/></a>
 					</div>
 					<div class="entry__blurb">
 						<h2> Lorem ipsum dolor sit, amet consectetur adipisicing, elit.</h2>
@@ -205,7 +205,7 @@
 				</article>
 				<article class='mason__brick entry'>
 					<div class=' entry__thumb'>
-						<a href='javascript:void(0)'><img src="/assets/carsm.jpg"/></a>
+						<a href='javascript:void(0)'><img src="assets/carsm.jpg"/></a>
 					</div>
 					<div class="entry__blurb">
 						<h2> Lorem ipsum dolor sit, amet consectetur adipisicing, elit.</h2>
@@ -225,7 +225,7 @@
 				</article>
 				<article class='mason__brick entry'>
 					<div class='entry__thumb'>
-						<a href='javascript:void(0)'><img src="/assets/modern2sm.jpg"/></a>
+						<a href='javascript:void(0)'><img src="assets/modern2sm.jpg"/></a>
 					</div>
 					<div class="entry__blurb">
 						<h2> Lorem ipsum dolor sit, amet consectetur adipisicing, elit.</h2>
@@ -245,7 +245,7 @@
 				</article>
 				<article class='mason__brick entry'>
 					<div class=' entry__thumb'>
-						<a href='javascript:void(0)'><img src="/assets/modern1sm.jpg"/></a>
+						<a href='javascript:void(0)'><img src="assets/modern1sm.jpg"/></a>
 					</div>
 					<div class="entry__blurb">
 						<h2> Lorem ipsum dolor sit, amet consectetur adipisicing, elit.</h2>
@@ -265,7 +265,7 @@
 				</article>
 				<article class='mason__brick entry'>
 					<div class='entry__thumb'>
-						<a href='javascript:void(0)' ><img src="/assets/modern3sm.jpg"/></a>
+						<a href='javascript:void(0)' ><img src="assets/modern3sm.jpg"/></a>
 					</div>
 					<div class="entry__blurb">
 						<h2> Lorem ipsum dolor sit, amet consectetur adipisicing, elit.</h2>
@@ -284,7 +284,7 @@
 				</article>
 				<article class='mason__brick entry'>
 					<div class='entry__thumb'>
-						<a href='javascript:void(0)'><img src="/assets/modern4sm.jpg"/></a>
+						<a href='javascript:void(0)'><img src="assets/modern4sm.jpg"/></a>
 					</div>
 					<div class="entry__blurb">
 						<h2> Lorem ipsum dolor sit, amet consectetur adipisicing, elit.</h2>
